--- a/.env
+++ b/.env
@@ -5,18 +5,18 @@
 # while .env are environment variables that are used by both *Astro and Scripts*.
 
 # Static Site Configuration
-SITE_TITLE=PoeMagie
-SITE_INDEX_TITLE="<em>PoeMagie</em>"
+SITE_TITLE=Ty Blog
+SITE_INDEX_TITLE="<em>Ty Blog</em>"
 SITE_DESCRIPTION="Welcome to my blog!"
-SITE_OWNER="Myriad Dreamin"
+SITE_OWNER="Gty"
 # Please remove it if you don't want to show the source code link.
-SITE_SOURCE_URL="https://github.com/Myriad-Dreamin/tylant"
+# SITE_SOURCE_URL="https://github.com/Myriad-Dreamin/tylant"
 
 # Deploys to GitHub Pages
 # Please check "Deploying to GitHub Pages" in README.md
 # For a GitHub page `https://username.github.io/repo`, the URL base is `/repo/`.
-SITE="https://myriad-dreamin.github.io"
-URL_BASE="/tylant/"
+SITE="https://gty0709.github.io"
+# URL_BASE="/tylant/"
 
 # Deploys to My Blog Site
 # SITE="https://www.myriad-dreamin.com"
