--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 # Static Site Configuration
 SITE_TITLE=Ty Blog
-SITE_INDEX_TITLE="<em>Ty Blog</em>"
+SITE_INDEX_TITLE="<em>Ty's Blog</em>"
 SITE_DESCRIPTION="Welcome to my blog!"
 SITE_OWNER="Gty"
 # Please remove it if you don't want to show the source code link.
