--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -46,7 +46,11 @@ jobs:
           mkdir -p ./assets/fonts
           curl -L https://github.com/Myriad-Dreamin/shiroa/releases/download/v0.1.5/source-han-serif-font-assets.tar.gz | tar -xvz -C assets/fonts
       - run: pnpm install
-      - run: pnpm build
+      - name: Build
+        run: pnpm build
+        env:
+          # 标记在 GitHub Actions 环境中构建，以重写图片路径
+          TYLANT_GH_RENDER: "true"
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
